--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -12,12 +12,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
+
 
 
 </head>
@@ -29,7 +35,7 @@
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myObject.infoPage.menus %> </span>
         </div>
-   
+
         <% if ((items.req.user != undefined) && (items.req.user.rol === "admin")){ %>
         <hr style="border-color: rgb(46, 115, 124);">
         <br>
@@ -44,46 +50,52 @@
                 </div>
             </div>
         </form>
-        <br><br>
+        <br> <br>
 
         <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
         <% const  nombres=  items.myObject.tablaMenu.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
 
-        <table class="table table-bordered table-striped table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
+
+        <div class="cardInside3">
+            <table id="menus" class="table table-bordered table-striped table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th scope="col"><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= docs[i]._id %> </td>
+                        <td>
+                            <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                            <%=docs[i].dishes[j]._id%>
+
+                            <% if( (j+1) < docs[i].dishes.length) {  %>
+                            <%= "|   "  %>
+                            <% } %>
+
+                            <% } %>
+                        <td><%= items.myNutrientsMenu[i][1] %> </td>
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/menu/delete/<%=docs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-warning"><a title="Editar"
+                                    href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
+                        </td>
+                        </td>
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td>
-                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                        <%=docs[i].dishes[j]._id%>
-
-                        <% if( (j+1) < docs[i].dishes.length) {  %>
-                        <%= "|   "  %>
-                        <% } %>
-
-                        <% } %>
-                    <td><%= items.myNutrientsMenu[i][1] %> </td>
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
-                                href="/menu/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button>
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                        <button type="button" class="btn btn-warning"><a title="Editar"
-                                href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td>
-                    </td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
+        <br>
 
         <% } else { %>
         <hr style="border-color: rgb(46, 115, 124);">
@@ -99,49 +111,67 @@
                 </div>
             </div>
         </form>
-        <br><br>
+        <br> <br>
 
         <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
         <% const  nombres=  items.myObject.tablaMenu.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
 
-        <table class="table table-bordered table-striped table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
+
+        <div class="cardInside3">
+            <table id="menus" class="table table-bordered table-striped table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th scope="col"><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= docs[i]._id %> </td>
+                        <td>
+                            <% for (var j=0; j < docs[i].dishes.length; j++) { %>
+                            <%=docs[i].dishes[j]._id%>
+
+                            <% if( (j+1) < docs[i].dishes.length) {  %>
+                            <%= "|   "  %>
+                            <% } %>
+
+                            <% } %>
+                        <td><%= items.myNutrientsMenu[i][1] %> </td>
+                        <td>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+
+                        </td>
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td>
-                        <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                        <%=docs[i].dishes[j]._id%>
-
-                        <% if( (j+1) < docs[i].dishes.length) {  %>
-                        <%= "|   "  %>
-                        <% } %>
-
-                        <% } %>
-                    <td><%= items.myNutrientsMenu[i][1] %> </td>
-                    <td>
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-
-                    </td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
-        <% } %>
-    
+                </tbody>
+            </table>
+            <% } %>
+        </div>
+        <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
 
+<script>
+    $(document).ready(function () {
+        $('#menus').DataTable({
+            "language": {
+
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+
+                "emptyTable": " "
+            }
+        });
+    });
+</script>
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 
 </html>
