--- a/views/menu/updateMenu.ejs
+++ b/views/menu/updateMenu.ejs
@@ -298,49 +298,58 @@
 
         </form>
 
-
-
-        <form method="POST" id="search" , action='./insert'>
-            <div class="wrap">
-                <div class="search">
-                    <input type="text" name="shrt_desc" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
-                    <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="spanColor searchButton">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
         <br>
-        <br>
-
-
+        
         <% const  nombres_sz=  items.myObject.tablaPlatosReducida.nombres.length %>
         <% const  nombres=  items.myObject.tablaPlatosReducida.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
 
 
-        <table class="table table-striped table-bordered table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
+       
+        <div class="cardInside3">
+            <table id="menus" class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th scope="col"><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= docs[i]._id %> </td>
+                        <td> <%= items.myKcal[i] %> </td>
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td> <%= items.myKcal[i] %> </td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
-
+                </tbody>
+            </table>
+        </div>
+    <br>    
     </div>
-    <%- include ("../partials/footer.ejs"); %>
+    
+        <%- include ("../partials/footer.ejs"); %>
+    </body>
+    
+    <script>
+        $(document).ready(function () {
+            console.log("hello")
+            $('#menus').DataTable({
+                "language": {
+                 
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+    
+                    "emptyTable": " "
+                }
+            });
+        });
+    </script>
+    
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    
+
 </body>
 
 
