--- a/views/recomendation/recomendationView.ejs
+++ b/views/recomendation/recomendationView.ejs
@@ -9,24 +9,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
+
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
 </head>
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-    
+
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myObject.infoPage.recomendaciones %> </span>
@@ -34,7 +39,7 @@
         <hr style="border-color: rgb(46, 115, 124);">
         <%- messages('message', locals) %>
         <br>
-        
+
         <form method="POST">
             <div class="wrap">
                 <div class="search">
@@ -46,12 +51,11 @@
                 </div>
             </div>
         </form>
-        <br>
+        <br>  <br>
 
 
-
-        <% if ((items.myObject.tablaRecomendacion.valores.length) > 0) { %>
-            <table id="alimentos" class="table table-bordered table-hover table-sm">
+        <div  class="cardInside3">
+            <table id="recomendation" class="table table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                     <tr>
 
@@ -71,36 +75,47 @@
                         <td> - </td>
                         <% } else { %>
                         <td> <%= items.myDocs[i][items.myObject.tablaRecomendacion.valores[j]] %> </td>
-                        
+
                         <% } %>
-                       
+
                         <% } %>
-                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/recomendation/delete/<%=items.myDocs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button><br> 
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/recomendation/<%=items.myDocs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> <br> 
-                            <button type="button" class="btn btn-warning"><a title="Editar" href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td> <br> 
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/recomendation/delete/<%=items.myDocs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button><br>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/recomendation/<%=items.myDocs[i]['_id']%>"><i
+                                        class="fas fa-search-plus"></i></a></button> <br>
+                            <button type="button" class="btn btn-warning"><a title="Editar"
+                                    href="/recomendation/update/<%=items.myDocs[i]['_id']%>"><i
+                                        class="fas fa-edit"></i></a></button></td> <br>
                         </td>
                     </tr>
                     <% } %>
                 </tbody>
-     
+
 
             </table>
-            <% } %>
+
+        </div>
+        <br>
+
     </div>
     <%- include ("../partials/footer.ejs"); %>
 
     <script>
         $(document).ready(function () {
-            $('#alimentos').DataTable({
+            $('#recomendation').DataTable({
                 "language": {
+
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+
                     "emptyTable": " "
                 }
             });
-    
+
         });
     </script>
     <!-- BOOTSTRAP TABLE -->
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 </body>
