--- a/views/user/users.ejs
+++ b/views/user/users.ejs
@@ -18,6 +18,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
 
 
 </head>
@@ -36,6 +39,8 @@
             <%- include ("../partials/message.ejs"); %>
         </div>
         <br>
+
+
         <form method="POST">
             <div class="wrap">
                 <div class="search">
@@ -49,41 +54,61 @@
         </form>
         <br><br>
 
+        <br><br>
+
         <% const  nombres_sz=  items.myObject.tablaUsers.nombres.length %>
         <% const  nombres=  items.myObject.tablaUsers.nombres %>
         <% const  docs_sz =   items.myUsers.length %>
         <% const  docs =   items.myUsers %>
 
-        <table class="table table-bordered table-striped table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i < nombres_sz; i++) { %>
-                    <th><%= nombres[i] %></th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <% for (var i=0; i < docs_sz; i++) { %>
-                <tr>
-                    <% for (var j=0; j< items.myObject.tablaUsers.valores.length; j++) { %>
-                    <td> <%= items.myUsers[i][items.myObject.tablaUsers.valores[j]] %> </td>
+        <div class="cardInside3">
+            <table id="users" class="table table-bordered table-striped table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i < nombres_sz; i++) { %>
+                        <th><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for (var i=0; i < docs_sz; i++) { %>
+                    <tr>
+                        <% for (var j=0; j< items.myObject.tablaUsers.valores.length; j++) { %>
+                        <td> <%= items.myUsers[i][items.myObject.tablaUsers.valores[j]] %> </td>
 
-                    <% } %>
-         
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
-                                href="/users/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button>
-                                <input id="_id" name="_id" type="hidden" value="xm234jq">
-                                
-                        <button type="submit" class="btn btn-warning"><a title="Editar" href="/users/update/<%=docs[i]['_id']%>"><i
-                                    class="fas fa-edit"></i></a></button></td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
+                        <% } %>
 
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/users/delete/<%=docs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button>
+                            <input id="_id" name="_id" type="hidden" value="xm234jq">
+
+                            <button type="submit" class="btn btn-warning"><a title="Editar"
+                                    href="/users/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
+                        </td>
+                    </tr>
+                    <% } %>
+                </tbody>
+            </table>
+        </div>
+        <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
+<script>
+    $(document).ready(function () {
+        $('#users').DataTable({
+            "language": {
 
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+
+                "emptyTable": " "
+            }
+        });
+    });
+</script>
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 
 </html>
