--- a/views/recomendation/recomendationView.ejs
+++ b/views/recomendation/recomendationView.ejs
@@ -106,11 +106,10 @@
         $(document).ready(function () {
             $('#recomendation').DataTable({
                 "language": {
-
-                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-
-                    "emptyTable": " "
-                }
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                "emptyTable": " "
+            },
+            "pagingType": "simple",
             });
 
         });
