--- a/views/user/users.ejs
+++ b/views/user/users.ejs
@@ -99,11 +99,10 @@
     $(document).ready(function () {
         $('#users').DataTable({
             "language": {
-
                 "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-
                 "emptyTable": " "
-            }
+            },
+            "pagingType": "simple"
         });
     });
 </script>
