--- a/public/stylesheets/fondo.css
+++ b/public/stylesheets/fondo.css
@@ -1,10 +1,10 @@
 body {
     background-image:  url("../images/food.png");
     /* background-position: 0cm; */
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: scroll;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    background-size: cover !important;
+    background-attachment: fixed !important;
   }
   
   td{
