--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,7 @@ a:hover {
   margin-top: 20px !important;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 125px;
   line-height: 60px;
   background-color: rgb(31, 37, 36);
   border-top: 2px solid rgba(172, 189, 186, 0.2);
@@ -84,22 +84,6 @@ table th {
   white-space: nowrap;
 }
 
-.pagination {
-  max-width: 50% !important;
-  width: auto !important;
-  table-layout: fixed;
-  width: 100% !important;
-}
-
-.dataTables_paginate{
-
-  padding-top: 50px !important;
-  padding-left: 80px !important;
-  max-width: 50% !important;
-  width: auto !important;
-  table-layout: fixed;
-  width: 100% !important;
-}
 
 .cardJson {
   box-shadow: 15px 15px 5px 0px rgba(170, 167, 167, 0.6);
@@ -283,6 +267,13 @@ h1 {
   border: 2px solid rgb(46, 115, 124);
 }
 
+
+.page-link {
+  color: white;
+  background-color: #17a2b8;
+}
+
+
 .planificacion {
   min-width: 420px;
   min-height: 250px;
@@ -465,4 +456,8 @@ input {
     max-width: 100%;
     height: auto;
   }
+}
+
+html{
+  width: 100%
 }
