--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -8,15 +8,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <!-- <script  src="../../public/javascripts/dish.js"></script> -->
-        <!-- <script src="jquery-3.5.1.min.js"></script> -->
-        <!-- <script defer src="../../public/javascripts/dishJQuery.js"></script> -->
+
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
@@ -28,11 +26,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-<!-- JQUERY AUTOCOMPLETE
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+
 
 </head>
 
@@ -88,10 +82,10 @@
                 <% } %>
             </tbody>
         </table>
-
-    </div>
+       
     </div>
     <br>
+</div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
 
@@ -100,11 +94,10 @@
         console.log("hello")
         $('#platos').DataTable({
             "language": {
-             
-            "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
                 "emptyTable": " "
-            }
+            },
+            "pagingType": "simple"
         });
     });
 </script>
