--- a/views/menu/updateMenu.ejs
+++ b/views/menu/updateMenu.ejs
@@ -14,8 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/menu.css" />
@@ -36,15 +36,15 @@
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
         <div class="cardInside2">
-        <h1><%= items.myObject.menu.update %></h1>
+            <h1><%= items.myObject.menu.update %></h1>
         </div>
         <br>
         <%- include ("../partials/message.ejs"); %>
         <br>
         <div class="cardInside3">
-        <h2><%= items.myMenu._id %></h2>
+            <h2><%= items.myMenu._id %></h2>
         </div>
-  
+
 
         <div class="card">
             <form method="POST" , id="aux" action=''>
@@ -210,9 +210,9 @@
                         eliminar.classList.add("eliminar");
                         eliminar.setAttribute("type", "button");
                         eliminar.value = "Eliminar"
-         
+
                         // col.style.display = "table";
-                        eliminar.style.marginTop="30px"
+                        eliminar.style.marginTop = "30px"
                         // eliminar.style.verticalAlign="middle"
                         // col.style["align-items"] = "center";
                         // col.style["padding-top"] = "12px";
@@ -299,14 +299,14 @@
         </form>
 
         <br>
-        
+
         <% const  nombres_sz=  items.myObject.tablaPlatosReducida.nombres.length %>
         <% const  nombres=  items.myObject.tablaPlatosReducida.nombres %>
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
 
 
-       
+
         <div class="cardInside3">
             <table id="menus" class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark">
@@ -326,29 +326,28 @@
                 </tbody>
             </table>
         </div>
-    <br>    
+        <br>
     </div>
-    
-        <%- include ("../partials/footer.ejs"); %>
-    </body>
-    
-    <script>
-        $(document).ready(function () {
-            console.log("hello")
-            $('#menus').DataTable({
-                "language": {
-                 
+
+    <%- include ("../partials/footer.ejs"); %>
+</body>
+
+<script>
+    $(document).ready(function () {
+        console.log("hello")
+        $('#menus').DataTable({
+            "language": {
                 "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-    
-                    "emptyTable": " "
-                }
-            });
+                "emptyTable": " "
+            },
+            "pagingType": "simple",
         });
-    </script>
-    
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
-    
+    });
+</script>
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+
 
 </body>
 
