--- a/views/user/updateUser.ejs
+++ b/views/user/updateUser.ejs
@@ -47,7 +47,7 @@
                 <form method="POST" , action='/users/update/<%= items.id %>'>
                     <br>
                     <% for (var i=0; i< items.myObject.userEdit.form.length; i++) { %>
-                    <label><%= items.myObject.userEdit.form[i].label %></label>
+                    <label><%= items.myObject.userEdit.form[i].label %><span class="required">*</span></label>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <% if (items.myObject.userEdit.form[i].name === "username")  {%>
@@ -76,14 +76,19 @@
 
                     </div>
                     <% } %>
-
+                    <br>
+                    <div class="requiredSpan">
+                        <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
+                            class="required">*</span>
+                    </div>
                     <br>
                     <div class="d-flex justify-content-center align-items-center p-3 texto">
                         <button class="btn btn-info" type="submit"
                             href="/users/update/<%= items.id %>"><%= items.myObject.userEdit.button %></button>
                     </div>
+                
                 </form>
-                </form>
+                
             </div>
         </div>
         <br><br>
