--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -51,7 +51,7 @@
             <form method="POST" , id="aux">
                 <br>
                 <% for (var i=0; i< items.myObject.dish.form.length; i++) { %>
-                <label><%= items.myObject.dish.form[i].label %></label>
+                <label><%= items.myObject.dish.form[i].label %><span class="required">*</span></label>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
 
@@ -84,7 +84,7 @@
                         <div class="row">
                             <% for (var i=0; i< items.myObject.dish.formIngredientes.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %><span class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
@@ -120,7 +120,7 @@
                             <% } %>
                             <% for (var i=0; i< items.myObject.dish.formIngredientesSel.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %><span class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
@@ -158,6 +158,12 @@
 
                     </div>
 
+                    <br>
+                    <div class="requiredSpan">
+                        <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
+                            class="required">*</span>
+                    </div>
+                    <br>
                     <input type="button" class="btn btn-dark" value="Añadir ingrediente" id="bSubmit">
                 </div>
 
@@ -194,6 +200,7 @@
                             const aLabel = document.createElement("LABEL");
                             console.log(myLabels[i].innerHTML)
                             aLabel.innerHTML = myLabels[i].innerHTML;
+                            // aLabel.classList.add("required2")
 
 
                             col.appendChild(aLabel);
