--- a/views/recomendation/recomendationInsert.ejs
+++ b/views/recomendation/recomendationInsert.ejs
@@ -49,7 +49,7 @@
             <form method="POST" , id="aux" action='./insert'>
                 <br>
                 <% for (var i=0; i< items.myObject.recomendacion.form.length; i++) { %>
-                <label><%= items.myObject.recomendacion.form[i].label %></label>
+                <label ><%= items.myObject.recomendacion.form[i].label %><span class="required">*</span></label> 
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
 
@@ -76,7 +76,7 @@
                     <div class="row">
                         <% } %>
                         <div class="col">
-                            <label><%= items.myObject.recomendacion.formNumber[i].label %></label>
+                            <label  ><%= items.myObject.recomendacion.formNumber[i].label %><span class="required">*</span></label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
 
@@ -101,6 +101,12 @@
 
                     <% } %>
                 </div>
+                <br>
+                <div class="requiredSpan">
+                    <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
+                        class="required">*</span>
+                </div>
+
 
                 <br>
                 <input type="submit" id="mySubmit" class="btn btn-info" value="<%= items.myObject.recomendacion.button %>" />
